--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/vehiclemonitor.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/vehiclemonitor.html
@@ -7,7 +7,7 @@
   <!--<base href="//webapi.amap.com/ui/1.0/ui/misc/MarkerList/examples/" />-->
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-  <title>完整示例</title>
+  <title>车辆实时地图</title>
   <link href="/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
   <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
   <link href="/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
