--- a/vc-web/vc-web-front/src/main/resources/public/monitor/register/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/register/index_list2.html
@@ -43,12 +43,9 @@
 
 <table id="table"></table>
 <div type="text/html" id="gridToolBar" class="gridToolBar" style="display: none;">
-	<a href='javascript:' class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
-	
-		
-	</div>
+	<a href='javascript:' sctl="canView" class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
+</div>
 
-<script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
 
 	var operate = {
@@ -104,16 +101,16 @@
 	var tableId = "TCsTerminal";
 	var clms = [{checkbox: true}
 	  		,{field: "cstId", title: "编号", width: 110, sort:true}
-	  		,{field: "cstIdd", title: "序列号", width: 110, sort:true}
-	  		,{field: "cstModel", title: "型号", width: 110, sort:true}
+	  		,{field: "cstIdd", title: "序列号", width: 140, sort:true}
+	  		,{field: "cstModel", title: "型号", width: 120, sort:true}
 	  		,{field: "cstMade", title: "制造商", width: 110, sort:true}
 	  		,{field: "cstProvince", title: "省域", width: 110, sort:true}
 	  		,{field: "cstCity", title: "市县域", width: 110, sort:true}
 	  		,{field: "cstColor", title: "车牌颜色", width: 110, sort:true}
 	  		,{field: "cstNumber", title: "车辆标识", width: 110, sort:true}
-	  		,{field: "cstMobile", title: "SIM", width: 110, sort:true}
-	  		,{field: "cstUpdateTime", title: "更新时间", width: 110, sort:true}
-	  		,{field: "cstAddTime", title: "添加时间", width: 110, sort:true}
+	  		,{field: "cstMobile", title: "SIM", width: 180, sort:true}
+	  		,{field: "cstUpdateTime", title: "更新时间", width: 160, sort:true}
+	  		,{field: "cstAddTime", title: "添加时间", width: 160, sort:true}
 	  		,{field: "cstStatusText", title: "状态", width: 110, sort:true}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
