--- a/vc-web/vc-web-front/src/main/resources/public/auth/group/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/group/index_list2.html
@@ -28,12 +28,11 @@
 
 <table id="table"></table>
 <div type="text/html" id="gridToolBar" class="gridToolBar" style="display: none;">
-	<a href='javascript:' class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
-	<a href='javascript:' class="btn btn-warning btn-outline grid_oper_btn" lay-event="edit" title="编辑"><i class="fa fa-wrench"></i></a>
-		<a href='javascript:' class="btn btn-danger btn-outline grid_oper_btn" lay-event="del" title="删除"><i class="fa fa-trash"></i></a>
-	</div>
+	<a href='javascript:' sctl="canView" class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
+	<a href='javascript:' sctl="update" class="btn btn-warning btn-outline grid_oper_btn" lay-event="edit" title="编辑"><i class="fa fa-wrench"></i></a>
+	<a href='javascript:' sctl="del" class="btn btn-danger btn-outline grid_oper_btn" lay-event="del" title="删除"><i class="fa fa-trash"></i></a>
+</div>
 
-<script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
 
 	var operate = {
@@ -137,10 +136,10 @@
 	var tableId = "TSrvGroup";
 	var clms = [{checkbox: true}
 	  		,{field: "sgId", title: "编号", width: 110, sort:true}
-	  		,{field: "sgName", title: "角色组名称", width: 110, sort:true}
-	  		,{field: "sgParent", title: "上级组", width: 110, sort:true}
-	  		,{field: "sgUser", title: "负责人", width: 110, sort:true}
-	  		,{field: "sgFlag", title: "组标识", width: 110, sort:true}
+	  		,{field: "sgName", title: "角色组名称", width: 160, sort:true}
+	  		,{field: "sgParent", title: "上级组", width: 120, sort:true}
+	  		,{field: "sgUser", title: "负责人", width: 120, sort:true}
+	  		,{field: "sgFlag", title: "组标识", width: 160, sort:true}
 	  		,{field: "sgStatusText", title: "状态", width: 110, sort:true}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
