--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_list2.html
@@ -41,12 +41,11 @@
 
 <table id="table"></table>
 <div type="text/html" id="gridToolBar" class="gridToolBar" style="display: none;">
-	<a href='javascript:' class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
-	<a href='javascript:' class="btn btn-warning btn-outline grid_oper_btn" lay-event="edit" title="编辑"><i class="fa fa-wrench"></i></a>
-		<a href='javascript:' class="btn btn-danger btn-outline grid_oper_btn" lay-event="del" title="删除"><i class="fa fa-trash"></i></a>
-	</div>
+	<a href='javascript:' sctl="canView" class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
+	<a href='javascript:' sctl="update" class="btn btn-warning btn-outline grid_oper_btn" lay-event="edit" title="编辑"><i class="fa fa-wrench"></i></a>
+	<a href='javascript:' sctl="del" class="btn btn-danger btn-outline grid_oper_btn" lay-event="del" title="删除"><i class="fa fa-trash"></i></a>
+</div>
 
-<script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
 
 	var operate = {
@@ -150,11 +149,11 @@
 	var tableId = "TCsModelMapping";
 	var clms = [{checkbox: true}
 	  		,{field: "id", title: "编号", width: 110, sort:true}
-	  		,{field: "userIdText", title: "主机厂用户", width: 110, sort:true}
-	  		,{field: "modelIdText", title: "车型", width: 110, sort:true}
-	  		,{field: "remark", title: "备注", width: 110, sort:true}
-	  		,{field: "addTime", title: "添加时间", width: 110, sort:true}
-	  		,{field: "updateTime", title: "更新时间", width: 110, sort:true}
+	  		,{field: "userIdText", title: "主机厂用户", width: 160, sort:true}
+	  		,{field: "modelIdText", title: "车型", width: 160, sort:true}
+	  		,{field: "remark", title: "备注", width: 160, sort:true}
+	  		,{field: "addTime", title: "添加时间", width: 160, sort:true}
+	  		,{field: "updateTime", title: "更新时间", width: 160, sort:true}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
