--- a/vc-web/vc-web-front/src/main/resources/public/control/struct/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/control/struct/index_list2.html
@@ -46,12 +46,11 @@
 
 <table id="table"></table>
 <div type="text/html" id="gridToolBar" class="gridToolBar" style="display: none;">
-	<a href='javascript:' class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
-	<a href='javascript:' class="btn btn-warning btn-outline grid_oper_btn" lay-event="edit" title="编辑"><i class="fa fa-wrench"></i></a>
-		<a href='javascript:' class="btn btn-danger btn-outline grid_oper_btn" lay-event="del" title="删除"><i class="fa fa-trash"></i></a>
-	</div>
+	<a href='javascript:' sctl="canView" class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
+	<a href='javascript:' sctl="update" class="btn btn-warning btn-outline grid_oper_btn" lay-event="edit" title="编辑"><i class="fa fa-wrench"></i></a>
+	<a href='javascript:' sctl="del" class="btn btn-danger btn-outline grid_oper_btn" lay-event="del" title="删除"><i class="fa fa-trash"></i></a>
+</div>
 
-<script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
 
 	var operate = {
@@ -155,10 +154,10 @@
 	var tableId = "TCsStruct";
 	var clms = [{checkbox: true}
 	  		,{field: "cssId", title: "编号", width: 110, sort:true}
-	  		,{field: "cssName", title: "指令名称", width: 110, sort:true}
+	  		,{field: "cssName", title: "指令名称", width: 200, sort:true}
 	  		,{field: "cssTypeText", title: "命令类型", width: 110, sort:true}
 	  		,{field: "cssReqCode", title: "请求示例", width: 110, sort:true}
-	  		,{field: "cssRequest", title: "请求结构", width: 110, sort:true}
+	  		,{field: "cssRequest", title: "请求结构", width: 400, sort:true}
 	  		,{field: "cssRepCode", title: "响应示例", width: 110, sort:true}
 	  		,{field: "cssResponse", title: "响应结构", width: 110, sort:true}
 	  		,{field: "cssStatusText", title: "状态", width: 110, sort:true}
