--- a/vc-web/vc-web-front/src/main/resources/public/electricity/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/historyState/index_list2.html
@@ -40,12 +40,9 @@
 
 <table id="table"></table>
 <div type="text/html" id="gridToolBar" class="gridToolBar" style="display: none;">
-	<a href='javascript:' class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
-	
-		
-	</div>
+	<a href='javascript:' sctl="canView" class="btn btn-primary btn-outline grid_oper_btn" lay-event="detail" title="查看"><i class="fa fa-file-text"></i></a>
+</div>
 
-<script src="/layui/layui.all.js?t=1510164124207"></script>
 <script type="text/javascript">
 
 	var operate = {
@@ -100,12 +97,12 @@
 
 	var tableId = "THistoryGb";
 	var clms = [{checkbox: true}
-	  		,{field: "csVin", title: "车辆vin码", width: 110, sort:true}
-	  		,{field: "csAccess", title: "授权系统", width: 110, sort:true}
-	  		,{field: "addTime", title: "添加时间", width: 110, sort:true}
-	  		,{field: "currentTime", title: "报文上传时间", width: 110, sort:true}
+	  		,{field: "csVin", title: "车辆vin码", width: 180, sort:true}
+	  		,{field: "csAccess", title: "授权系统", width: 160, sort:true}
+	  		,{field: "addTime", title: "添加时间", width: 160, sort:true}
+	  		,{field: "currentTime", title: "报文上传时间", width: 160, sort:true}
 	  		,{field: "csProtocolText", title: "协议类型", width: 110, sort:true}
-	  		,{field: "gbData", title: "报文内容", width: 110, sort:true}
+	  		,{field: "gbData", title: "报文内容", width: 200, sort:true}
 	  		,{field: "gbTypeText", title: "报文类型", width: 110, sort:true}
 	  		,{field: "csVerifyText", title: "校验结果", width: 110, sort:true}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
