--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>后台</title>
+		<title>车辆历史数据</title>
 		<link href="/css/bootstrap.min.css?v=3.3.5" rel="stylesheet">
 		<link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
 		<link href="/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
@@ -31,6 +31,7 @@
 		<script src="/js/tpui-core.js?v=11111212"></script>
 		<script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
 		<script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
+		<script src="/layui/layui.all.js?t=1510164124207"></script>
 		
 		<script type="text/javascript">
 			$(document).ready(function () {
