--- a/vc-web/vc-web-front/src/main/resources/public/monitor/map/historyDrivepaces.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/map/historyDrivepaces.html
@@ -7,7 +7,7 @@
   <!--<base href="//webapi.amap.com/ui/1.0/ui/misc/PathSimplifier/examples/"/>-->
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-  <title>轨迹展示&巡航</title>
+  <title>车辆驾驶轨迹展示</title>
   <style>
     html,
     body,
