--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<title>H+ 后台主题UI框架 - 主页</title>
+		<title>车辆监控后台 - 主页</title>
 
-		<meta name="keywords" content="H+后台主题,后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
-		<meta name="description" content="H+是一个完全响应式，基于Bootstrap3最新版本开发的扁平化主题，她采用了主流的左右两栏式布局，使用了Html5+CSS3等现代技术">
+		<meta name="keywords" content="车辆监控后台">
+		<meta name="description" content="车辆监控后台">
 
 		<!--[if lt IE 8]>
     	<meta http-equiv="refresh" content="0;ie.html" />
@@ -64,7 +64,7 @@
 				</div>
 
 				<div class="row J_mainContent" id="content-main">
-					<iframe class="J_iframe" name="iframe1" width="100%" height="100%" src="index_v1.html?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
+					<iframe class="J_iframe" name="iframe1" width="100%" height="100%" src="" frameborder="0" seamless></iframe>
 				</div>
 
 				<!-- 退出登录弹框 -->
