--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/detail.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/detail.html
@@ -28,7 +28,7 @@
 				<dl  >
 					<dt>主机厂用户：</dt>
 					<dd>
-					<input name="userId" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/auth/user/query">
+					<input name="userId" placeholder="请输入关键字" class="form-control searchinput"   dataWhere="8"   dataUrl="/auth/user/query">
 					</dd>
 				</dl>
 				<dl  >
