添加前端页面的默认排序。

--- a/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
@@ -224,7 +224,7 @@
 	      	  },
 	      	  request:{limitName: "rows"},
 	      	  where:{
-	      			sidx:"csmUpdateTime",
+	      			sidx:"csmId",
 					sord:"desc"
 	      	  }
 	};
@@ -304,6 +304,14 @@
 								table.render(option);
 							},
 							reloadData:function(params){
+
+                                if(params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
+                                {
+                                    $.extend(params.where,{
+                                        sidx:"csmId",
+                                        sord:"desc"
+                                    })
+                                }
 								table.reload(tableId, params);
 							},
 							getSelectIds:function(){
