--- a/vc-web/vc-web-front/src/main/resources/public/monitor/stateLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/stateLimited/index_list2.html
@@ -190,7 +190,7 @@
 	      	  },
 	      	  request:{limitName: "rows"},
 	      	  where:{
-	      			sidx:"cssAddTime",
+	      			sidx:"cssId",
 					sord:"desc"
 	      	  }
 	};
@@ -269,6 +269,14 @@
 								table.render(option);
 							},
 							reloadData:function(params){
+
+                                if(params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
+                                {
+                                    $.extend(params.where,{
+                                        sidx:"cssId",
+                                        sord:"desc"
+                                    })
+                                }
 								table.reload(tableId, params);
 							},
 							getSelectIds:function(){
