--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
@@ -211,7 +211,7 @@
 	      	  },
 	      	  request:{limitName: "rows"},
 	      	  where:{
-	      			sidx:"csvUpdateTime",
+	      			sidx:"csvId",
 					sord:"desc"
 	      	  }
 	};
@@ -292,6 +292,14 @@
 								table.render(option);
 							},
 							reloadData:function(params){
+
+                                if(params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
+                                {
+                                    $.extend(params.where,{
+                                        sidx:"csvId",
+                                        sord:"desc"
+                                    })
+                                }
 								table.reload(tableId, params);
 							},
 							getSelectIds:function(){
