--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_list2.html
@@ -255,6 +255,14 @@
 								table.render(option);
 							},
 							reloadData:function(params){
+
+                                if(params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
+                                {
+                                    $.extend(params.where,{
+                                        sidx:"id",
+                                        sord:"desc"
+                                    })
+                                }
 								table.reload(tableId, params);
 							},
 							getSelectIds:function(){
