--- a/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/statistics/index_list2.html
@@ -49,7 +49,9 @@
 			return $(".btn-group");
 		},
 		query:function(){
-			grid.reloadData({where:getFormData(this.getQueryForm())});
+			grid.reloadData({where:
+				getFormData(this.getQueryForm()
+				)});
 		},
 
         exportData:function(){
@@ -133,7 +135,7 @@
 	      	  },
 	      	  request:{limitName: "rows"},
 	      	  where:{
-	      			sidx:"cssTime",
+	      			sidx:"cssId",
 					sord:"desc"
 	      	  }
 	};
@@ -213,6 +215,14 @@
 								table.render(option);
 							},
 							reloadData:function(params){
+
+                                if(params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
+                                {
+                                    $.extend(params.where,{
+                                        sidx:"cssId",
+                                        sord:"desc"
+                                    })
+                                }
 								table.reload(tableId, params);
 							},
 							getSelectIds:function(){
